--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #d4e09b;
+    padding: 1rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.page {
+    display: grid;
+    grid-template-columns: auto auto;
+    color: #22577a;
+}
+
+.heading {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-right: 2rem;
+}
+
+.todo-list {
+    display: grid;
+    grid-template-columns: 2rem 22rem;
+    grid-template-areas: 
+        "leftside main"
+        "bottom bottom";
+    margin: 0.2rem;
+    color: white;
+}
+
+.todo-list div {
+    border: 0.1rem solid black;
+}
+
+.todo-list-main {
+    grid-area: main;
+    height: 35rem;
+    background-color: #000000;
+    text-align: center;
+    padding: 1.5rem;
+    font-size: 1.3rem;
+    border-top-right-radius: 0.5rem;
+}
+
+.todo-list-leftside {
+    grid-area: leftside;
+    border-top-left-radius: 0.5rem;
+    background-color: white;
+}
+
+.todo-list-bottom {
+    grid-area: bottom;
+    padding: 0.3rem;
+    background-color: #6c757d;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+
+input[type=checkbox] {
+    margin-right: 10px;
+    font-size: 30px;
+}
+
+input[type=checkbox]:focus {
+    outline: 0;
+}
+
+.text {
+    text-decoration: line-through;
+    font-style: italic;
+    color: lightslategrey;
 }
